[metadata]
name = pyTouch
version = attr: pyTouch.__version__
author = Electro707 (Jamal Bouajjaj)
author_email = develop@electro707.com
long_description = file: README
license = GNU General Public License v3 (GPLv3)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = pyTouch
install_requires =
    pillow

[options.packages.find]
where = pyTouch

[options.package_data]
pyTouch =
    *.so