[metadata]
name = pyPTouch
version = attr: pyPTouch.__version__
author = Electro707 (Jamal Bouajjaj)
author_email = develop@electro707.com
long_description = file: README
license = GNU General Public License v3 (GPLv3)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = pyPTouch
install_requires =
    pillow
    pdf2image
    cairosvg

[options.packages.find]
where = pyPTouch

[options.package_data]
pyPTouch =
    *.so